--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 
 .slider{
-    background: url(images/banner.jpeg);
+    background: url(banner.jpeg);
     height: 100vh ;
     background-attachment: fixed;
     background-position: center;
